<resources>
    <string name="app_name">CopyPasta</string>

    <string name="add_device_title">Add device</string>
    <string name="add_device_input_name">Device name</string>
    <string name="add_device_input_ip">IP address</string>
    <string name="add_device_button">@string/add_device_title</string>
    <string name="add_device_scan_manual_button">Enter the information manually</string>
    <string name="add_device_scan_text">Download CopyPasta software on your Computer (<a href="https://copypastaofficial.github.io">https://copypastaofficial.github.io</a>). Open the CopyPasta software and scan the QR Code that appears on the screen. Make sure your phone is connected to the same WiFi network as your computer.</string>
    <string name="add_device_error_qr_code">The QR Code is invalid</string>
    <string name="add_device_scan_qr_code">Scan QR Code</string>
    <string name="main_select_device">Choose a device :</string>
    <string name="main_add_button_device">@string/add_device_title</string>
    <string name="main_local_button">Use the app locally</string>
    <string name="select_mode_barcode_button">Qr code / Barcode</string>
    <string name="select_mode_text_button">Scan text</string>
    <string name="select_mode_files_button">Send files</string>

    <string name="camera_message">Scan or choose a picture from gallery</string>
    <string name="ask_permission_camera">You must enable camera permission.</string>
    <string name="ask_permission_settings">Settings</string>
    <string name="image_message">Loading ...</string>
    <string name="image_button">Send</string>
    <string name="main_divider">Or</string>
    <string name="select_mode_object_button">Scan object</string>
    <string name="select_mode_copy_button">Copy to clipboard</string>
    <string name="select_mode_share_button">Share</string>
    <string name="select_mode_card_title">Last scanned text</string>
    <string name="select_mode_copy_success">The text has been copied to the clipboard</string>
    <string name="select_mode_error_server_title">Cannot communicate with your computer</string>
    <string name="select_mode_error_server_content">Please connect your device to the same WiFi as your computer. If it is already the case, go back to the home screen, delete the computer and add it back.</string>
    <string name="select_mode_clipboard_button">Send clipboard</string>
    <string name="select_mode_error_clipboard_content">You must copy a text to use this functionality.</string>
    <string name="select_mode_error_clipboard_title">Clipboard empty</string>
    <string name="scan_qr_code_email_address">Address :</string>
    <string name="scan_qr_code_email_subject">Subject :</string>
    <string name="scan_qr_code_email_body">Content :</string>
    <string name="scan_qr_code_wireless_ssid" translatable="false">SSID :</string>
    <string name="scan_qr_code_wireless_password">Password :</string>
    <string name="scan_qr_code_wireless_encryption">Encryption :</string>
    <string name="select_mode_send_button">Send at computer</string>
    <string name="scan_qr_code_sms_number">Phone number :</string>
    <string name="scan_qr_code_sms_content">Content :</string>
    <string name="scan_qr_code_wireless_encryption_open">Open</string>
    <string name="scan_qr_code_location_lat">Latitude :</string>
    <string name="scan_qr_code_location_long">Longitude :</string>
    <string name="scan_qr_code_event_summary">Summary :</string>
    <string name="scan_qr_code_event_description">Description :</string>
    <string name="scan_qr_code_event_location">Location :</string>
    <string name="scan_qr_code_event_start">Start :</string>
    <string name="scan_qr_code_event_end">End :</string>
    <string name="select_mode_alert_remove_title">Are you sure you want to delete this device?</string>
    <string name="select_mode_alert_remove_cancel">Cancel</string>
    <string name="select_mode_alert_remove_validate">Delete</string>
    <string name="ask_permission_cancel" translatable="false">@string/select_mode_alert_remove_cancel</string>
    <string name="ask_permission_title">Permissions</string>
    <string name="add_device_error">This field cannot be empty</string>
    <string name="ask_permission_storage">You must enable the storage permission.</string>
    <string name="select_mode_upload_files_notification_title">Send files in progress</string>
    <string name="select_mode_upload_files_notification_channel_title">Progress of file uploads</string>
    <string name="select_mode_upload_files_notification_channel_description">Notification displayed when files are being uploaded to computer</string>
    <string name="scan_qr_code_contact_name">Name :</string>
    <string name="scan_qr_code_contact_title">Profession :</string>
    <string name="scan_qr_code_contact_organization">Society :</string>
    <string name="select_mode_upload_scan_successful">The scan has been sent!</string>
    <string name="select_mode_upload_files_successful">The files have been sent!</string>
    <string name="select_mode_search_button">Search on Google</string>
    <string name="select_mode_map_button">Open in Google Maps</string>
    <string name="select_mode_phone_button" >Call</string>
    <string name="select_mode_wifi_button">Connect to WiFi</string>
    <string name="select_mode_url_button">Open in browser</string>
    <string name="select_mode_contact_button">Add to contacts</string>
    <string name="select_mode_email_button">Send the mail</string>
    <string name="select_mode_sms_button">Send the SMS</string>
    <string name="select_mode_switch_key_strokes" >Automatically paste scans on the computer</string>
    <string name="add_device_software_download_reminder_title">Information</string>
    <string name="add_device_software_download_reminder_content">Don\'t forget to download our software on your computer!</string>
    <string name="add_device_software_download_reminder_positive_button">Download</string>
    <string name="add_device_software_download_reminder_negative_button">Later</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>